--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
   "author": "Katsuo",
   "license": "ISC",
   "dependencies": {
-    "discord.js": "^12.4.1",
+    "cron": "^1.8.2",
+    "discord.js": "^12.4.1"
+  },
+  "devDependencies": {
     "dotenv": "^8.2.0"
   }
 }
