--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 	"author": "",
 	"license": "ISC",
 	"devDependencies": {
+		"@types/mongoose": "^5.10.1",
 		"@types/node": "^14.14.6",
 		"concurrently": "^5.3.0",
 		"dotenv": "^8.2.0",
@@ -22,6 +23,8 @@
 	},
 	"dependencies": {
 		"cron": "^1.8.2",
-		"discord.js": "^12.4.1"
+		"discord.js": "^12.4.1",
+		"mongoose": "^5.10.15",
+		"reflect-metadata": "^0.1.13"
 	}
 }
